# foxglove_config

./: CMakeLists.txt  package.xml
config/: go2_grass.yaml  mower.yaml
include/: boundary_detector.h  livo_node.h  localmap_node.h  localmap_node_copy.h  obstacle_detector.h  obstacle_detector_v0.h  obstacle_detector_v2.h  types.h  utility.h
launch/: detector.launch.py  foxglove_bridge.launch.py  gemini345_lg_cd_comp.launch.py  gemini345_lg_cd_raw.launch.py  gemini345_lg_clr_comp.launch.py  go2_grass.launch.py  localmap.launch.py  localmap_d.launch.py  mower.launch.py  yolo_segmentation_d.launch.py
msg/: SegmentationInstance.msg  SegmentationResult.msg
proto/: obstacle.proto
rviz/: det.rviz  localmap.rviz  localmap_d.rviz  mapping.rviz  yolo_segmentation_d.rviz
scripts/: compare_slam_total_csv.py  log_analyzer.py  map_publisher.py  one_click_record.py  pcd.py  test_1216.py  util_func.py  yolo_segmentation_node.py
src/: boundary_detector.cpp  boundary_detector_standalone.cpp  imu_calib_offline.cpp  livo_node.cpp  localmap_node.cpp  localmap_node_copy.cpp  obstacle_detector.cpp  obstacle_detector_node.cpp  obstacle_detector_standalone.cpp  obstacle_detector_v0.cpp  obstacle_detector_v2.cpp  proto_viewer.cpp  test_vgicp.cpp  test_vio.cpp
